[package]
name = "viceroy-lib"
version = "0.7.1"
description = "Viceroy implementation details."
authors = ["Fastly"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://docs.rs/viceroy-lib"
homepage = "https://github.com/fastly/Viceroy"
repository = "https://github.com/fastly/Viceroy"
keywords = ["wasm", "fastly"]
categories = [
    "development-tools",
    "network-programming",
    "simulation",
    "wasm"
]
include = [
    "../CHANGELOG.md",
    "../SECURITY.md",
    "src/**/*",
    "compute-at-edge-abi/**/*.witx",
]

[dependencies]
acme2-eab = "^0.5"
anyhow = { workspace = true }
base64-url = "^2.0.0"
bytes = "^1.2.1"
bytesize = "^1.1.0"
cfg-if = "^1.0"
cranelift-entity = "^0.88.1"
fastly-shared = "^0.9.3"
flate2 = "^1.0.24"
futures = { workspace = true }
futures-util = "^0.3.28"
http = "^0.2.8"
http-body = "^0.4.5"
hyper = { workspace = true }
itertools = { workspace = true }
lazy_static = "^1.4.0"
openssl = "^0.10.54"
regex = "^1.3.9"
reqwest = { version = "0.11", features = ["rustls-tls-native-roots"] }
rustls = "^0.21.1"
rustls-native-certs = "^0.6.3"
rustls-pemfile = "^1.0.3"
semver = "^0.10.0"
serde = "^1.0.145"
serde_derive = "^1.0.114"
serde_json = { workspace = true }
thiserror = "^1.0.37"
tokio = { workspace = true }
tokio-rustls = "^0.24.1"
toml = "^0.5.9"
tracing = { workspace = true }
tracing-futures = { workspace = true }
url = { workspace = true }
wasi-common = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-nn = { workspace = true }
wiggle = { workspace = true }

[dev-dependencies]
tempfile = "3.6.0"

[features]
default = []
test-fatalerror-config = []
